# sgai-ad-proxy

./: .dockerignore  CHANGELOG-OSC.md  Cargo.toml  Dockerfile  README.md  entrypoint.sh
.github/workflows/: sync-fork.yml
docs/: sequence.zen
scripts/: transcode.sh
src/: main.rs  mp4_parser.rs  utils.rs  vast_parser.rs
test_data/: vast4.0_transcoded.xml  vast4.1.xml
